# FFmpeg-meets-Flamenco

./: .gitignore  BUILD_SUCCESS.md  DEPLOYMENT.md  FINAL_IMPROVEMENTS.md  FINAL_IMPROVEMENTS_V2.md  FINAL_SIMPLIFIED_VERSION.md  LICENSE  NEW_FEATURES.md  README.md  USER_GUIDE.md  build.spec  build_exe.py  debug_test.xlsx  demo_usage.py  main.py  pyproject.toml  requirements.txt  run_ffmpeg_encoder.bat  test_app.py  test_crf_low_latency.py  test_excel.xlsx  test_executable.py  test_ffmpeg.py  test_input.mov  test_mapping.xlsx  test_new.xlsx  test_new_features.py  test_qp_fix.py  user_test.xlsx
.github/workflows/: build.yml
ffmpeg_encoder/: app.py
ffmpeg_encoder/core/: batch_rename.py  ffmpeg_cmd.py  ffprobe.py  multi_encoder.py  presets.py  queue.py  runner.py
ffmpeg_encoder/integrations/: flamenco_client.py
ffmpeg_encoder/ui/: flamenco_dialog.py  log_panel.py  main_window.py  multi_encoding_dialog.py  output_dialog.py  queue_panel.py  rename_dialog.py  settings_panel.py
ffmpeg_encoder/utils/: env.py  ffmpeg_check.py  logger.py
